Assessing Data for twitter-archive-enhanced,csv

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -2489,7 +2489,12 @@
     "**1.1.2 Programmatic Assessment:**\n",
     "- `rating_numerator` : has a maximum value of 1766 - **Data Quality Dimension - `Consistency`**. \n",
     "- `rating_denominator` : has a maximum value of 170 - **Data Quality Dimension - `Consistency`**.\n",
-    "- All in all, this dataset appears to be clean, except for `expanded_url` - we have about 59 instances missing - **Data Quality Dimension - `Completeness`**."
+    "- All in all, this dataset appears to be clean, except for `expanded_url` - we have about 59 instances missing - **Data Quality Dimension - `Completeness`**.\n",
+    "\n",
+    "***1.2 Structural Issues:***\n",
+    "\n",
+    "**1.2.1 Visual Assessment:**\n",
+    "- we can see that, there are four classes of dogs `doggo`, `floofer`, `puppo`, `pupper`; these should a part of one unit - `dog_class` - **Data Quality Dimension - `Consistency`**."
    ]
   }
  ],
