Assessing Data for twitter-archive-enhanced,csv

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -2494,7 +2494,11 @@
     "***1.2 Structural Issues:***\n",
     "\n",
     "**1.2.1 Visual Assessment:**\n",
-    "- we can see that, there are four classes of dogs `doggo`, `floofer`, `puppo`, `pupper`; these should a part of one unit - `dog_class` - **Data Quality Dimension - `Consistency`**."
+    "- we can see that, there are four classes of dogs `doggo`, `floofer`, `puppo`, `pupper`; these should a part of one unit - `dog_class` - **Data Quality Dimension - `Consistency`**.\n",
+    "\n",
+    "**1.2.2 Programmatic Assessment:**\n",
+    "- `in_reply_to_status_id`, `retweeted_status_id`, `retweeted_status_user_id`, `in_reply_to_user_id` of type float64 must be converted into int - **Data Quality Dimension - `Validity`**.\n",
+    "- `timestamp`, `retweeted_status_timestamp` of type object must be converted into datatime - **Data Quality Dimension - `Validity`**."
    ]
   }
  ],
