Assessing data for image-predictions.tsv

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -3729,6 +3729,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2075 entries, 0 to 2074\n",
+      "Data columns (total 12 columns):\n",
+      "tweet_id    2075 non-null int64\n",
+      "jpg_url     2075 non-null object\n",
+      "img_num     2075 non-null int64\n",
+      "p1          2075 non-null object\n",
+      "p1_conf     2075 non-null float64\n",
+      "p1_dog      2075 non-null bool\n",
+      "p2          2075 non-null object\n",
+      "p2_conf     2075 non-null float64\n",
+      "p2_dog      2075 non-null bool\n",
+      "p3          2075 non-null object\n",
+      "p3_conf     2075 non-null float64\n",
+      "p3_dog      2075 non-null bool\n",
+      "dtypes: bool(3), float64(3), int64(2), object(4)\n",
+      "memory usage: 152.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Programmatic Assessment - Information\n",
+    "img_pre.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3737,7 +3771,11 @@
     "***1.1 Content Issues:***\n",
     "\n",
     "**1.1.1 Visual Assessment:**\n",
-    "- None"
+    "- None.\n",
+    "\n",
+    "**1.1.2 Programmatic Assessment:**\n",
+    "- None.\n",
+    "- We have about 281 image urls missing with respect to our `twitter-archive-enhanced.csv` file."
    ]
   }
  ],
