Assessing data for image-predictions.tsv

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -3775,7 +3775,7 @@
     "\n",
     "**1.1.2 Programmatic Assessment:**\n",
     "- None.\n",
-    "- We have about 281 image urls missing with respect to our `twitter-archive-enhanced.csv` file."
+    "- We have about 281 images on a whole, that are missing with respect to our `twitter-archive-enhanced.csv` file."
    ]
   }
  ],
