Assessing data for image-predictions.tsv

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -2473,6 +2473,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking for duplicates - tweet_ids\n",
+    "sum(archive.tweet_id.duplicated())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3772,6 +3793,7 @@
     "\n",
     "**1.1.1 Visual Assessment:**\n",
     "- None.\n",
+    "- We have few dog breeds that are represented in lowercase.\n",
     "\n",
     "**1.1.2 Programmatic Assessment:**\n",
     "- None.\n",
