Assessing data for image-predictions.tsv

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -3792,12 +3792,18 @@
     "***1.1 Content Issues:***\n",
     "\n",
     "**1.1.1 Visual Assessment:**\n",
-    "- None.\n",
     "- We have few dog breeds that are represented in lowercase.\n",
     "\n",
     "**1.1.2 Programmatic Assessment:**\n",
+    "- We have about 281 images on a whole, that are missing with respect to our `twitter-archive-enhanced.csv` file - **Data Quality Dimension - `Completeness`**.\n",
+    "\n",
+    "***1.2 Structural Issues:***\n",
+    "\n",
+    "**1.2.1 Visual Assessment:**\n",
     "- None.\n",
-    "- We have about 281 images on a whole, that are missing with respect to our `twitter-archive-enhanced.csv` file."
+    "\n",
+    "**1.2.2 Programmatic Assessment:**\n",
+    "- None."
    ]
   }
  ],
