Assessing data for image-predictions.tsv

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -5023,7 +5023,7 @@
     "\n",
     "**1.1.2 Programmatic Assessment:**\n",
     "- We have about 281 images on a whole, that are missing with respect to our `twitter-archive-enhanced.csv` file - **Data Quality Dimension - `Completeness`**.\n",
-    "- We can see that, we have about 66 duplicates or a pair of two tweets is pointing to same *`jpg_url`* - **Data Quality Dimension - `Accuracy`**.\n",
+    "- We can see that, we have about 66 duplicates **OR** a pair of two tweets are pointing to same *`jpg_url`* - **Data Quality Dimension - `Accuracy`**.\n",
     "\n",
     "***1.2 Structural Issues:***\n",
     "\n",
