--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -2868,25 +2868,25 @@
    "source": [
     "1. **`twitter-archive-enhanced.csv`** table\n",
     "\n",
-    "***1.1 Content Issues:***\n",
+    "***1 Content Issues:***\n",
     "\n",
-    "**1.1.1 Visual Assessment:**\n",
+    "**1.1 Visual Assessment:**\n",
     "- `rating_numerator` : has values such as 1, 3.. e.t.c - **Data Quality Dimension - `Consistency`**.\n",
     "- `rating_denominator` : have values, less than 10, for example, the tweet_id - 666287406224695296 has the number 2 as its value - **Data Quality Dimension - `Consistency`**. \n",
     "- We see that, Articles - `a`, `an`, `the` have been used to name dogs, as well as words such as `such`, `quite` - **Data Quality Dimension - `Validity`**.\n",
     "- There are instances where the names of dogs are in lowercases - **Data Quality Dimension - `Consistency`**.\n",
     "\n",
-    "**1.1.2 Programmatic Assessment:**\n",
+    "**1.2 Programmatic Assessment:**\n",
     "- `rating_numerator` : has a maximum value of 1766 - **Data Quality Dimension - `Consistency`**. \n",
     "- `rating_denominator` : has a maximum value of 170 - **Data Quality Dimension - `Consistency`**.\n",
     "- All in all, this dataset appears to be clean, except for `expanded_url` - we have about 59 instances missing - **Data Quality Dimension - `Completeness`**.\n",
     "\n",
-    "***1.2 Structural Issues:***\n",
+    "***2 Structural Issues:***\n",
     "\n",
-    "**1.2.1 Visual Assessment:**\n",
+    "**2.1 Visual Assessment:**\n",
     "- we can see that, there are four classes of dogs `doggo`, `floofer`, `puppo`, `pupper`; these should a part of one unit - `dog_class` - **Data Quality Dimension - `Consistency`**.\n",
     "\n",
-    "**1.2.2 Programmatic Assessment:**\n",
+    "**2.2 Programmatic Assessment:**\n",
     "- `in_reply_to_status_id`, `retweeted_status_id`, `retweeted_status_user_id`, `in_reply_to_user_id` of type float64 must be converted into int - **Data Quality Dimension - `Validity`**.\n",
     "- `timestamp`, `retweeted_status_timestamp` of type object must be converted into datatime - **Data Quality Dimension - `Validity`**."
    ]
@@ -5385,21 +5385,21 @@
    "source": [
     "2. **`image-predictions.tsv`** table\n",
     "\n",
-    "***1.1 Content Issues:***\n",
+    "***1 Content Issues:***\n",
     "\n",
-    "**1.1.1 Visual Assessment:**\n",
+    "**1.1 Visual Assessment:**\n",
     "- We have few dog breeds that are represented in lowercase.\n",
     "\n",
-    "**1.1.2 Programmatic Assessment:**\n",
+    "**1.2 Programmatic Assessment:**\n",
     "- We have about 281 images on a whole, that are missing with respect to our `twitter-archive-enhanced.csv` file - **Data Quality Dimension - `Completeness`**.\n",
     "- We can see that, we have about `66` duplicates **OR** a pair of two tweets are pointing to same *`jpg_url`* - **Data Quality Dimension - `Accuracy`**.\n",
     "\n",
-    "***1.2 Structural Issues:***\n",
+    "***2 Structural Issues:***\n",
     "\n",
-    "**1.2.1 Visual Assessment:**\n",
+    "**2.1 Visual Assessment:**\n",
     "- None.\n",
     "\n",
-    "**1.2.2 Programmatic Assessment:**\n",
+    "**2.2 Programmatic Assessment:**\n",
     "- None."
    ]
   },
@@ -5884,9 +5884,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2342 entries, 0 to 2341\n",
+      "Data columns (total 3 columns):\n",
+      "favorites    2342 non-null int64\n",
+      "retweets     2342 non-null int64\n",
+      "tweet_id     2342 non-null int64\n",
+      "dtypes: int64(3)\n",
+      "memory usage: 55.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "retweets_fav.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3. **`tweet_master.txt`** table\n",
+    "\n",
+    "***1. Content Issues:***\n",
+    "\n",
+    "**1.1 Visual Assessment:**\n",
+    "- None.\n",
+    "\n",
+    "**1.2 Programmatic Assessment:**\n",
+    "- We have about 14 missing records - **Data Quality Dimension - `Completeness`**."
+   ]
   }
  ],
  "metadata": {
