Summarizing Assessing step - Done

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -5130,8 +5130,13 @@
     "- Completed the second step.\n",
     "- The following are the insights:\n",
     "    - from `twitter-archive-enhanced.csv` datset, the rating_numerator and denominator need to be fixed.\n",
-    "    - the table also represents row values as columns, which needs to be fixed.\n",
-    "    - "
+    "    - the dataset also represents row values as columns, which needs to be fixed.\n",
+    "    - the dataset also has structural issues such as wrong datatype assigned to a column.\n",
+    "    - from `images-preductions.tsv` dataset, there is consistency issue with naming dog breeds.\n",
+    "    - the dataset isn't complete when compared to `twitter-archive-enhanced.csv`, we have about 281 missing tweets.\n",
+    "    - Also we have `jpg_urls'` that are pointing to a pair of tweets.\n",
+    "    - `tweet_master.txt` dataset has about 14 missing records.\n",
+    "    - the dataset alone hold the information about retweets and favourites - bad form of schema normalization."
    ]
   }
  ],
