Cleaning master_set - step 1

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        " 'wrangle_act.ipynb']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,78 +783,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tweet_id</th>\n",
-       "      <th>retweets</th>\n",
-       "      <th>favorites</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2009</th>\n",
-       "      <td>671882082306625538</td>\n",
-       "      <td>1419</td>\n",
-       "      <td>3536</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1934</th>\n",
-       "      <td>673688752737402881</td>\n",
-       "      <td>516</td>\n",
-       "      <td>1294</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>847</th>\n",
-       "      <td>763167063695355904</td>\n",
-       "      <td>3283</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                tweet_id  retweets  favorites\n",
-       "2009  671882082306625538      1419       3536\n",
-       "1934  673688752737402881       516       1294\n",
-       "847   763167063695355904      3283          0"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# changing the column ordering\n",
-    "tweet_json = tweet_json[['tweet_id', 'retweets', 'favorites']]\n",
-    "tweet_json.sample(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
@@ -896,12 +824,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# let's load up dataset, and starting assessing them.\n",
-    "\n",
     "archive =  pd.read_csv(files_list[0], encoding = 'utf-8')\n",
     "img_pre = pd.read_csv(files_list[1], sep = '\\t', encoding = 'utf-8')\n",
     "retweets_fav = pd.read_json(files_list[2], lines = True, encoding =  'utf-8')"
@@ -5137,6 +5064,171 @@
     "    - Also we have `jpg_urls'` that are pointing to a pair of tweets.\n",
     "    - `tweet_master.txt` dataset has about 14 missing records.\n",
     "    - the dataset alone hold the information about retweets and favourites - bad form of schema normalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2356 entries, 0 to 2355\n",
+      "Data columns (total 30 columns):\n",
+      "tweet_id                      2356 non-null int64\n",
+      "in_reply_to_status_id         78 non-null float64\n",
+      "in_reply_to_user_id           78 non-null float64\n",
+      "timestamp                     2356 non-null object\n",
+      "source                        2356 non-null object\n",
+      "text                          2356 non-null object\n",
+      "retweeted_status_id           181 non-null float64\n",
+      "retweeted_status_user_id      181 non-null float64\n",
+      "retweeted_status_timestamp    181 non-null object\n",
+      "expanded_urls                 2297 non-null object\n",
+      "rating_numerator              2356 non-null int64\n",
+      "rating_denominator            2356 non-null int64\n",
+      "name                          2356 non-null object\n",
+      "doggo                         2356 non-null object\n",
+      "floofer                       2356 non-null object\n",
+      "pupper                        2356 non-null object\n",
+      "puppo                         2356 non-null object\n",
+      "jpg_url                       2075 non-null object\n",
+      "img_num                       2075 non-null float64\n",
+      "p1                            2075 non-null object\n",
+      "p1_conf                       2075 non-null float64\n",
+      "p1_dog                        2075 non-null object\n",
+      "p2                            2075 non-null object\n",
+      "p2_conf                       2075 non-null float64\n",
+      "p2_dog                        2075 non-null object\n",
+      "p3                            2075 non-null object\n",
+      "p3_conf                       2075 non-null float64\n",
+      "p3_dog                        2075 non-null object\n",
+      "favorites                     2342 non-null float64\n",
+      "retweets                      2342 non-null float64\n",
+      "dtypes: float64(10), int64(3), object(17)\n",
+      "memory usage: 570.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the master dataset\n",
+    "master_set = archive.merge(img_pre, how = 'left', on = ['tweet_id'])\n",
+    "master_set = master_set.merge(retweets_fav, how = 'left', on = ['tweet_id'])\n",
+    "master_set.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving the file to local disk.\n",
+    "files_list.append('dataset/master_set_raw.csv')\n",
+    "master_set.to_csv(files_list[3], index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a copy of the master set\n",
+    "master_copy = master_set.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Issues to Clean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define\n",
+    "- Delete *retweets* with *any duplicates* and get rid of *tweets with **no** images*.\n",
+    "- Once done, drop the following columns:\n",
+    "    1. `retweeted_status_id`\n",
+    "    2. `retweeted_status_user_id`\n",
+    "    3. `retweeted_status_timestamp`\n",
+    "    4. `in_reply_to_status_id`\n",
+    "    5. `in_reply_to_user_id`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# selecting those, tweets that have no retweets\n",
+    "master_copy = master_copy[pd.isnull(master_copy['retweeted_status_id'])]\n",
+    "\n",
+    "# deleting duplicates if any\n",
+    "master_copy = master_copy.drop_duplicates()\n",
+    "\n",
+    "# deleting those tweets with no images.\n",
+    "master_copy = master_copy.dropna(subset = ['jpg_url'])\n",
+    "\n",
+    "# reseting index\n",
+    "master_copy.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "# droping columns\n",
+    "master_copy = master_copy.drop(labels = ['retweeted_status_id',\n",
+    "                                         'retweeted_status_user_id',\n",
+    "                                         'retweeted_status_timestamp',\n",
+    "                                         'in_reply_to_status_id', \n",
+    "                                         'in_reply_to_user_id'],\n",
+    "                               axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1994, 25)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# after droping the columns, we should have about 25 dimensions\n",
+    "master_copy.shape"
    ]
   }
  ],
