--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -887,13 +887,8 @@
     "    2. `retweeted_status_user_id`\n",
     "    3. `retweeted_status_timestamp`\n",
     "    4. `in_reply_to_status_id`\n",
-    "    5. `in_reply_to_user_id`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    5. `in_reply_to_user_id`\n",
+    "    \n",
     "#### Code"
    ]
   },
@@ -999,7 +994,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Test"
+    "####  Test - 1"
    ]
   },
   {
@@ -1212,7 +1207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test"
+    "#### Test - 2"
    ]
   },
   {
@@ -1248,13 +1243,8 @@
    "metadata": {},
    "source": [
     "#### Define\n",
-    "- Condense `doggo`, `floofer`, `pupper`, `puppo` as `dog_class`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Condense `doggo`, `floofer`, `pupper`, `puppo` as `dog_class`.\n",
+    "\n",
     "#### Code"
    ]
   },
@@ -1328,6 +1318,304 @@
     "assert floofer == master_copy.dog_class.value_counts()['floofer'], \"Some entries are missing\"\n",
     "assert pupper == master_copy.dog_class.value_counts()['pupper'], \"Some entries are missing\"\n",
     "assert puppo == master_copy.dog_class.value_counts()['puppo'], \"Some entries are missing\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Fix all inaccurate data.\n",
+    "\n",
+    "#### Define\n",
+    "- fix names of dogs.\n",
+    "- fix ratings.\n",
+    "- check source column.\n",
+    "\n",
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking source column\n",
+    "master_copy.source.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<span style=\"color: red\">Okay! only three values, a categorical variable</span>**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "# assiging unique values to source.\n",
+    "master_copy['source'] = master_copy['source'].apply(lambda x: re.findall(r'>(.*)<', x)[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Test - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>source</th>\n",
+       "      <th>text</th>\n",
+       "      <th>expanded_urls</th>\n",
+       "      <th>rating_numerator</th>\n",
+       "      <th>rating_denominator</th>\n",
+       "      <th>name</th>\n",
+       "      <th>jpg_url</th>\n",
+       "      <th>img_num</th>\n",
+       "      <th>...</th>\n",
+       "      <th>p1_dog</th>\n",
+       "      <th>p2</th>\n",
+       "      <th>p2_conf</th>\n",
+       "      <th>p2_dog</th>\n",
+       "      <th>p3</th>\n",
+       "      <th>p3_conf</th>\n",
+       "      <th>p3_dog</th>\n",
+       "      <th>favorites</th>\n",
+       "      <th>retweets</th>\n",
+       "      <th>dog_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1391</th>\n",
+       "      <td>842115215311396866</td>\n",
+       "      <td>2017-03-15 20:48:07 +0000</td>\n",
+       "      <td>Twitter for iPhone</td>\n",
+       "      <td>This is Bentley. It's his first time going to ...</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/842115215...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Bentley</td>\n",
+       "      <td>https://pbs.twimg.com/media/C6_LTCZWoAAKm_O.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Newfoundland</td>\n",
+       "      <td>0.181336</td>\n",
+       "      <td>True</td>\n",
+       "      <td>schipperke</td>\n",
+       "      <td>0.125152</td>\n",
+       "      <td>True</td>\n",
+       "      <td>14666.0</td>\n",
+       "      <td>3243.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>707995814724026368</td>\n",
+       "      <td>2016-03-10 18:25:30 +0000</td>\n",
+       "      <td>Twitter for iPhone</td>\n",
+       "      <td>This is Farfle. He lost his back legs during t...</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/707995814...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Farfle</td>\n",
+       "      <td>https://pbs.twimg.com/media/CdNOb17WwAA5z4A.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Gila_monster</td>\n",
+       "      <td>0.126978</td>\n",
+       "      <td>False</td>\n",
+       "      <td>lumbermill</td>\n",
+       "      <td>0.050400</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3282.0</td>\n",
+       "      <td>1202.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>618</th>\n",
+       "      <td>670474236058800128</td>\n",
+       "      <td>2015-11-28 05:28:09 +0000</td>\n",
+       "      <td>Twitter for iPhone</td>\n",
+       "      <td>Honor to rate this dog. Great teeth. Nice horn...</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/670474236...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://pbs.twimg.com/media/CU4AwqQWUAAEgE2.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>siamang</td>\n",
+       "      <td>0.062536</td>\n",
+       "      <td>False</td>\n",
+       "      <td>gorilla</td>\n",
+       "      <td>0.058894</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1565.0</td>\n",
+       "      <td>788.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1267</th>\n",
+       "      <td>848212111729840128</td>\n",
+       "      <td>2017-04-01 16:35:01 +0000</td>\n",
+       "      <td>Twitter for iPhone</td>\n",
+       "      <td>This is Jerry. He's doing a distinguished tong...</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/848212111...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Jerry</td>\n",
+       "      <td>https://pbs.twimg.com/media/C8V0aI5V0AAgO9m.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Ibizan_hound</td>\n",
+       "      <td>0.245797</td>\n",
+       "      <td>True</td>\n",
+       "      <td>wallaby</td>\n",
+       "      <td>0.131647</td>\n",
+       "      <td>False</td>\n",
+       "      <td>16949.0</td>\n",
+       "      <td>3255.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1498</th>\n",
+       "      <td>750147208377409536</td>\n",
+       "      <td>2016-07-05 02:00:06 +0000</td>\n",
+       "      <td>Twitter for iPhone</td>\n",
+       "      <td>And finally, happy 4th of July from the squad ...</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/750147208...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://pbs.twimg.com/media/CmkO57iXgAEOxX9.jpg</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Boston_bull</td>\n",
+       "      <td>0.004794</td>\n",
+       "      <td>True</td>\n",
+       "      <td>French_bulldog</td>\n",
+       "      <td>0.004573</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3280.0</td>\n",
+       "      <td>1045.0</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                tweet_id                  timestamp              source  \\\n",
+       "1391  842115215311396866  2017-03-15 20:48:07 +0000  Twitter for iPhone   \n",
+       "410   707995814724026368  2016-03-10 18:25:30 +0000  Twitter for iPhone   \n",
+       "618   670474236058800128  2015-11-28 05:28:09 +0000  Twitter for iPhone   \n",
+       "1267  848212111729840128  2017-04-01 16:35:01 +0000  Twitter for iPhone   \n",
+       "1498  750147208377409536  2016-07-05 02:00:06 +0000  Twitter for iPhone   \n",
+       "\n",
+       "                                                   text  \\\n",
+       "1391  This is Bentley. It's his first time going to ...   \n",
+       "410   This is Farfle. He lost his back legs during t...   \n",
+       "618   Honor to rate this dog. Great teeth. Nice horn...   \n",
+       "1267  This is Jerry. He's doing a distinguished tong...   \n",
+       "1498  And finally, happy 4th of July from the squad ...   \n",
+       "\n",
+       "                                          expanded_urls  rating_numerator  \\\n",
+       "1391  https://twitter.com/dog_rates/status/842115215...                12   \n",
+       "410   https://twitter.com/dog_rates/status/707995814...                12   \n",
+       "618   https://twitter.com/dog_rates/status/670474236...                10   \n",
+       "1267  https://twitter.com/dog_rates/status/848212111...                 6   \n",
+       "1498  https://twitter.com/dog_rates/status/750147208...                13   \n",
+       "\n",
+       "      rating_denominator     name  \\\n",
+       "1391                  10  Bentley   \n",
+       "410                   10   Farfle   \n",
+       "618                   10     None   \n",
+       "1267                  10    Jerry   \n",
+       "1498                  10     None   \n",
+       "\n",
+       "                                              jpg_url  img_num    ...      \\\n",
+       "1391  https://pbs.twimg.com/media/C6_LTCZWoAAKm_O.jpg      1.0    ...       \n",
+       "410   https://pbs.twimg.com/media/CdNOb17WwAA5z4A.jpg      1.0    ...       \n",
+       "618   https://pbs.twimg.com/media/CU4AwqQWUAAEgE2.jpg      1.0    ...       \n",
+       "1267  https://pbs.twimg.com/media/C8V0aI5V0AAgO9m.jpg      1.0    ...       \n",
+       "1498  https://pbs.twimg.com/media/CmkO57iXgAEOxX9.jpg      1.0    ...       \n",
+       "\n",
+       "     p1_dog            p2   p2_conf p2_dog              p3   p3_conf p3_dog  \\\n",
+       "1391   True  Newfoundland  0.181336   True      schipperke  0.125152   True   \n",
+       "410   False  Gila_monster  0.126978  False      lumbermill  0.050400  False   \n",
+       "618   False       siamang  0.062536  False         gorilla  0.058894  False   \n",
+       "1267   True  Ibizan_hound  0.245797   True         wallaby  0.131647  False   \n",
+       "1498   True   Boston_bull  0.004794   True  French_bulldog  0.004573   True   \n",
+       "\n",
+       "      favorites retweets  dog_class  \n",
+       "1391    14666.0   3243.0       None  \n",
+       "410      3282.0   1202.0       None  \n",
+       "618      1565.0    788.0       None  \n",
+       "1267    16949.0   3255.0       None  \n",
+       "1498     3280.0   1045.0       None  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# taking a look at sample of 5 rows\n",
+    "master_copy.sample(5)"
    ]
   }
  ],
