--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -6758,6 +6758,168 @@
     "# printing information\n",
     "master_copy.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Getting rid of predictions and add in final touches\n",
+    "\n",
+    "#### Define\n",
+    "- Condense the `p_[1|2|3]` to `predicted_dog` and `conf_[1|2|3]` to `accuracy`.\n",
+    "- drop columns `img_num`, `p1`, `p1_conf`, `p1_dog`, `p2`, `p2_conf`, `p2_dog`, `p3`, `p3_conf`, `p3_dog`.\n",
+    "- rename columns that are apt to this dataset.\n",
+    "\n",
+    "#### Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We will store the fisrt true algorithm\n",
+    "# with it's level of confidence\n",
+    "predicted_dog_breed = []\n",
+    "accuracy = []\n",
+    "\n",
+    "# funvtion for getting the levels\n",
+    "def condense_predictions(dataframe):\n",
+    "    '''\n",
+    "    takes in the dataframe and extracts information for predicted dog breed.\n",
+    "    dataframe: input to the fuction\n",
+    "    '''\n",
+    "    if dataframe['p1_dog'] == True:\n",
+    "        predicted_dog_breed.append(dataframe['p1'])\n",
+    "        accuracy.append(dataframe['p1_conf'])\n",
+    "    elif dataframe['p2_dog'] == True:\n",
+    "        predicted_dog_breed.append(dataframe['p2'])\n",
+    "        accuracy.append(dataframe['p2_conf'])\n",
+    "    elif dataframe['p3_dog'] == True:\n",
+    "        predicted_dog_breed.append(dataframe['p3'])\n",
+    "        accuracy.append(dataframe['p3_conf'])\n",
+    "    else:\n",
+    "        predicted_dog_breed.append('NaN')\n",
+    "        accuracy.append(0)\n",
+    "\n",
+    "master_copy.apply(condense_predictions, axis=1)\n",
+    "master_copy['dog_breeds'] = predicted_dog_breed\n",
+    "master_copy['accuracy'] = accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dropping columns\n",
+    "master_copy.drop(['img_num',\n",
+    "                  'p1', 'p1_conf', 'p1_dog',\n",
+    "                  'p2', 'p2_conf', 'p2_dog',\n",
+    "                  'p3', 'p3_conf', 'p3_dog'],\n",
+    "                 axis = 1,\n",
+    "                 inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final tocuh - renaming\n",
+    "master_copy.rename(columns={'source': 'tweet_source',\n",
+    "                            'text': 'tweet',\n",
+    "                            'expanded_urls' : 'tweet_urls',\n",
+    "                            'jpg_url': 'image_url',\n",
+    "                            'favorites': 'tweet_favorites',\n",
+    "                            'retweets': 'tweet_retweets'},\n",
+    "                   inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1685 entries, 0 to 1684\n",
+      "Data columns (total 14 columns):\n",
+      "tweet_id              1685 non-null object\n",
+      "timestamp             1685 non-null datetime64[ns]\n",
+      "tweet_source          1685 non-null category\n",
+      "tweet                 1685 non-null object\n",
+      "tweet_urls            1685 non-null object\n",
+      "rating_numerator      1685 non-null int64\n",
+      "rating_denominator    1685 non-null int64\n",
+      "image_url             1685 non-null object\n",
+      "tweet_favorites       1685 non-null int64\n",
+      "tweet_retweets        1685 non-null int64\n",
+      "dog_class             1685 non-null category\n",
+      "dog_names             1685 non-null object\n",
+      "dog_breeds            1685 non-null object\n",
+      "accuracy              1685 non-null float64\n",
+      "dtypes: category(2), datetime64[ns](1), float64(1), int64(4), object(6)\n",
+      "memory usage: 161.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# printing information\n",
+    "master_copy.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Storing\n",
+    "\n",
+    "**Done with the process of cleaning, let's store and analyse this dataset.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['archive_copy.csv',\n",
+       " 'image-predictions.tsv',\n",
+       " 'master_set_raw.csv',\n",
+       " 'tweet_json.txt',\n",
+       " 'tweet_master.csv',\n",
+       " 'twitter-archive-enhanced.csv',\n",
+       " 'twitter_archive_master.csv']"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# saving the file to local disk\n",
+    "master_copy.to_csv(folder+'/'+'twitter_archive_master.csv', index=False, encoding = 'utf-8')\n",
+    "\n",
+    "# listing the dataset folder\n",
+    "os.listdir(folder)"
+   ]
   }
  ],
  "metadata": {
