Dry test run completed successfully

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -357,10 +357,10 @@
    "outputs": [],
    "source": [
     "# setting up all the necessary placeholders for API\n",
-    "consumer_key = 'c81rP4s1hS5L5Skm7olqz5MrS'\n",
-    "consumer_secret = 'jVDI6cAGwcCWmQZLULSyA0nsAP4fGE2uP8qahEIEGmeBTBsyuL'\n",
-    "access_token = '1064551313793404928-za7CZvnKa4gJPNzenmuzjWtyec8ZrC'\n",
-    "access_secret = 'G8TIkiA21ki7M4lYoL8MxY6OXKFyyMPSPVjBHPJ8jZBJP'\n",
+    "consumer_key = 'xxx.xxx.xxx.xxx'\n",
+    "consumer_secret = 'xxx.xxx.xxx.xxx'\n",
+    "access_token = 'xxx.xxx.xxx.xxx'\n",
+    "access_secret = 'xxx.xxx.xxx.xxx'\n",
     "\n",
     "auth = OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_secret)\n",
